--- a/wp-content/themes/expert-massage/views/includes/modules/content/indications.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/indications.pug
@@ -1,4 +1,4 @@
-- var indicationsData = locals.data.pageData.indications
+- var indicationsData = pageData.indications
 
 section.indications
   h2.indications__title.heading!= indicationsData.title
