--- a/wp-content/themes/expert-massage/views/includes/modules/content/price-list/callback-form.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/price-list/callback-form.pug
@@ -7,7 +7,7 @@
       b готовы полностью вернуть вам деньги
       |
       | за&nbsp;процедуру, если вам не&nbsp;понра&shy;вится. Но&nbsp;пока это никому не&nbsp;понадобилось&nbsp;:)
-    button.price-list-callback-form__trigger.link.underline(class=(locals.data.pageData.theme === 4 ? 'link_dark-primary' : 'link_primary') type='button') Перезвоните мне
+    button.price-list-callback-form__trigger.link.underline(class=(pageData.theme === 4 ? 'link_dark-primary' : 'link_primary') type='button') Перезвоните мне
   .price-list-callback-form__wrap.hidden
     button.price-list-callback-form__close(type='button' aria-label='Закрыть форму')
     include ../application-form/application-form
