--- a/wp-content/themes/expert-massage/views/pages/chiromassage.pug
+++ b/wp-content/themes/expert-massage/views/pages/chiromassage.pug
@@ -1,158 +1,103 @@
 extends ../layouts/default
 
 block variables
-  - var globalData = locals.data.globalData
   -
-    locals.data.pageData = {
-      url: '/chiromassage/',
-      title: `Хиромассаж - Москва. Отличная цена, профессиональный подход`,
-      description: `Хиромассаж - сочетание европейской техники и восточных приёмов для наилучшего эффекта для мышц и
-      кожи лица. Москва - отличная цена и профессиональный подход`,
-      keywords: `хиромассаж, массаж лица, Москва, услуга, описание, цена, стоимость`,
-      canonical: 'https://expert-massage-clinic.ru/chiromassage/',
-      pageClass: 'chiromassage-page',
-      theme: '5',
-      massage: globalData.massages['chiromassage'],
-      mainScreenHeading: 'Хиромассаж лица',
-      mainScreenSubheading: `Омолаживает и&nbsp;подтягивает кожу, улучшает эмоциональное состояние, гармонизирует
-        и&nbsp;расслабляет`,
-      mainScreenFeatures: globalData.company.features,
-      aboutMassage: [
-        {
-          title: 'Что это за процедура?',
-          text: [
-            'Хиромассаж, или испанский массаж — это комбинация европейской техники массажа с восточными. Процедура может включать пассивную йогу, мануальную терапию, ритмическую акупрессуру и другие тех&shy;ники. Приёмов очень много, и мастер подберёт именно те, которые вам подойдут.',
-            'Такая бережная, но тщательная проработка, подобранная специально для вашего лица, позволит снять зажимы и спазмы с каждой мышцы. Улучшится лимфоток, кожа насытится кислородом, морщинки станут менее заметными.',
-            'При этом хиромассаж — одна из самых приятных и рассла&shy;бляющих процедур для лица, в её основе лежит принцип удовольствия на протяжении всего времени сеанса. '
-          ]
-        },
-        {
-          title: 'Какой будет результат?',
-          text: [
-            'Ваше лицо будет выглядеть свежим и здоровым, так как массажист проработает все зажимы и снимет усталость каждой лицевой мышцы.',
-            'Кожа подтянется, станет упругой и эластичной. Улучшится кровоснабжение тканей, за счёт притока крови, кислорода и питательных веществ, увлажнятся глубокие слои кожи. Это позволит вернуть тургор кожи, уменьшить морщинки, снять отёки. Пропадут проявления купероза, лицо обретёт здоровый цвет и тонус.',
-          ]
-        },
-        {
-          title: 'Как массаж улучшает эмоциональное состояние?',
-          text: [
-            'Хиромассаж включает более 100 приёмов, подбираемых прямо во время процедуры. Некоторые из них не только омолаживают лицо и подтягивают ткани, но и снимают возбуждение с центральной нервной системы.',
-            'Благодаря этому стабилизируется эмоциональный фон, а приятная и комфортная процедура убирает и сам стресс, и его внешние проявления.',
-            'После процедуры наши клиенты отмечают, что весь организм как будто наполнился энергией.'
-          ]
-        }
-      ],
-      massageResults: {
-        title: 'Результаты массажа лица',
-        face: {
-          slidesOrder: [1, 7, 8, 9, 2, 3, 4, 5, 6]
-        }
-      },
-      reviewsBlock: {
-        title: 'Отзывы о&nbsp;массаже лица',
-        reviews: [
-          {
-            id: 22,
-            type: 'face',
-            source: 'yandex',
-            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась. Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО! Я вернусь, не пройдет и полгода...`,
-            author: 'Анна',
-            date: '13.02.2020'
-          },
-          {
-            id: 23,
-            type: 'face',
-            source: 'site',
-            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие. Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
-            author: 'Оксана',
-            date: '05.02.2020'
-          },
-          {
-            id: 24,
-            type: 'face',
-            source: 'site',
-            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
-            author: 'Татьяна',
-            date: '20.01.2020'
-          },
-          {
-            id: 22,
-            type: 'face',
-            source: 'yandex',
-            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась. Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО! Я вернусь, не пройдет и полгода...`,
-            author: 'Анна',
-            date: '13.02.2020'
-          },
-          {
-            id: 23,
-            type: 'face',
-            source: 'site',
-            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие. Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
-            author: 'Оксана',
-            date: '05.02.2020'
-          },
-          {
-            id: 24,
-            type: 'face',
-            source: 'site',
-            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
-            author: 'Татьяна',
-            date: '20.01.2020'
-          }
+    var pageData = JSON.parse(pageData)
+    pageData.title = `Хиромассаж - Москва. Отличная цена, профессиональный подход`
+    pageData.description = `Хиромассаж - сочетание европейской техники и восточных приёмов для наилучшего эффекта для мышц и
+      кожи лица. Москва - отличная цена и профессиональный подход`
+    pageData.keywords = `хиромассаж, массаж лица, Москва, услуга, описание, цена, стоимость`
+    pageData.canonical = 'https://expert-massage-clinic.ru/chiromassage/'
+    pageData.pageClass = 'chiromassage-page'
+    pageData.theme = '5'
+    pageData.massage = globalData.massages['chiromassage']
+    pageData.mainScreenHeading = 'Хиромассаж лица'
+    pageData.mainScreenSubheading = `Омолаживает и&nbsp;подтягивает кожу, улучшает эмоциональное состояние, гармонизирует
+      и&nbsp;расслабляет`
+    pageData.mainScreenFeatures = globalData.company.features
+    pageData.aboutMassage = [
+      {
+        title: 'Что это за процедура?',
+        text: [
+          'Хиромассаж, или испанский массаж — это комбинация европейской техники массажа с восточными. Процедура может включать пассивную йогу, мануальную терапию, ритмическую акупрессуру и другие тех&shy;ники. Приёмов очень много, и мастер подберёт именно те, которые вам подойдут.',
+          'Такая бережная, но тщательная проработка, подобранная специально для вашего лица, позволит снять зажимы и спазмы с каждой мышцы. Улучшится лимфоток, кожа насытится кислородом, морщинки станут менее заметными.',
+          'При этом хиромассаж — одна из самых приятных и рассла&shy;бляющих процедур для лица, в её основе лежит принцип удовольствия на протяжении всего времени сеанса. '
         ]
       },
-      massageVideo: {
-        id: 'H9IRW0ffpWk',
-        poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_face.jpg`,
-        sticker: false
-      },
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;хиромассажа',
-        features: [
-          {
-            title: 'Уменьшатся морщины, отёки, подтянется контур лица',
-            text: `Хиромассаж эффективно борется с&nbsp;признаками старения и&nbsp;такими недостатками как&nbsp;второй подбородок, поплывший овал лица и&nbsp;отёки. Вы заметите результат после первого сеанса`
-          },
-          {
-            title: 'Улучшится кожа, вы будете выглядеть моложе, свежее и&nbsp;здоровее',
-            text: `Массаж улучшит кровообращение, запустит активное питание всех клеток, ваша кожа станет упругой, увлажнённой и&nbsp;будет словно светиться изнутри`
-          },
-          {
-            title: 'У&nbsp;вас улучшится настроение, вы будете чувствовать гармонию',
-            text: `Особые массажные техники снимают возбуждение с&nbsp;центральной нервной системы. Это улучшит настроение само по&nbsp;себе, а&nbsp;изменения в&nbsp;зеркале дадут вам дополнительный повод для&nbsp;радости`
-          }
+      {
+        title: 'Какой будет результат?',
+        text: [
+          'Ваше лицо будет выглядеть свежим и здоровым, так как массажист проработает все зажимы и снимет усталость каждой лицевой мышцы.',
+          'Кожа подтянется, станет упругой и эластичной. Улучшится кровоснабжение тканей, за счёт притока крови, кислорода и питательных веществ, увлажнятся глубокие слои кожи. Это позволит вернуть тургор кожи, уменьшить морщинки, снять отёки. Пропадут проявления купероза, лицо обретёт здоровый цвет и тонус.',
         ]
       },
-      massageDescription: [
-        `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
-          <br>
-          Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
-        `Хиромассаж выполняется только руками, без каких-либо приспособлений.<br>
-          <br>
-          Процедура начинается с плавного разогрева. Массажист аккуратно, подушечками пальцев, проходится по контуру лица, прорабатывает шею, виски и лоб, разогревает всё лицо.<br>
-          <br>
-          Дальше начинается интенсивный этап, который включает лимфодренаж, интенсивные движе&shy;ния по массажным линиям и лифтинг отдель&shy;ных участков кожи. Завершают процедуру приятные, расслабляющие приёмы для мышц`,
-        `Хиромассаж лица дает прекрасный антивозрастной и общий улучшающий эффект, заметный с первого сеанса.<br>
-          <br>
-          Контур лица подтягивается, полностью уходят отёки и круги под глазами, кожа становится эластичной и упругой. Нормализуется жирность кожи, разглаживаются мимические морщины, лицо выглядит молодо и излучает здоровье`
-      ],
-      faq: [
-        locals.data.globalData.commonFaceFaq[0],
-        locals.data.globalData.commonFaceFaq[1],
-        {
-          question: `В чём отличие этого массажа от других массажей лица?`,
-          answer: `Главное отличие хиромассажа от других массажей лица в том, что он направлен не только на физическое, но и на психоэмоциональное состояние человека. После процедуры наши клиенты чувствуют, что их настроение заметно улучшилось, стало больше сил и энергии. В какой-то степени это относится ко всем расслабляющим массажам, но к хиромассажу особенно. При этом хиромассаж прекрасно справляется и со своей основной задачей – омолодить и подтянуть лицо.`
-        },
-        locals.data.globalData.commonFaceFaq[2],
-        locals.data.globalData.commonFaceFaq[3],
-        locals.data.globalData.commonFaceFaq[4]
-      ],
-      priceList: {
-        showPromo: true
-      },
-      moreMassages: [3, 1, 2, 4],
-      hasMap: true
+      {
+        title: 'Как массаж улучшает эмоциональное состояние?',
+        text: [
+          'Хиромассаж включает более 100 приёмов, подбираемых прямо во время процедуры. Некоторые из них не только омолаживают лицо и подтягивают ткани, но и снимают возбуждение с центральной нервной системы.',
+          'Благодаря этому стабилизируется эмоциональный фон, а приятная и комфортная процедура убирает и сам стресс, и его внешние проявления.',
+          'После процедуры наши клиенты отмечают, что весь организм как будто наполнился энергией.'
+        ]
+      }
+    ]
+    pageData.massageResults = {
+      title: 'Результаты массажа лица',
+      face: {
+        slidesOrder: [1, 7, 8, 9, 2, 3, 4, 5, 6]
+      }
     }
+    pageData.reviewsBlock.title = 'Отзывы о&nbsp;массаже лица'
+    pageData.massageVideo = {
+      id: 'H9IRW0ffpWk',
+      poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_face.jpg`,
+      sticker: false
+    }
+    pageData.featuresBlock = {
+      heading: 'Что вы получите от&nbsp;хиромассажа',
+      features: [
+        {
+          title: 'Уменьшатся морщины, отёки, подтянется контур лица',
+          text: `Хиромассаж эффективно борется с&nbsp;признаками старения и&nbsp;такими недостатками как&nbsp;второй подбородок, поплывший овал лица и&nbsp;отёки. Вы заметите результат после первого сеанса`
+        },
+        {
+          title: 'Улучшится кожа, вы будете выглядеть моложе, свежее и&nbsp;здоровее',
+          text: `Массаж улучшит кровообращение, запустит активное питание всех клеток, ваша кожа станет упругой, увлажнённой и&nbsp;будет словно светиться изнутри`
+        },
+        {
+          title: 'У&nbsp;вас улучшится настроение, вы будете чувствовать гармонию',
+          text: `Особые массажные техники снимают возбуждение с&nbsp;центральной нервной системы. Это улучшит настроение само по&nbsp;себе, а&nbsp;изменения в&nbsp;зеркале дадут вам дополнительный повод для&nbsp;радости`
+        }
+      ]
+    }
+    pageData.massageDescription = [
+      `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
+        <br>
+        Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
+      `Хиромассаж выполняется только руками, без каких-либо приспособлений.<br>
+        <br>
+        Процедура начинается с плавного разогрева. Массажист аккуратно, подушечками пальцев, проходится по контуру лица, прорабатывает шею, виски и лоб, разогревает всё лицо.<br>
+        <br>
+        Дальше начинается интенсивный этап, который включает лимфодренаж, интенсивные движе&shy;ния по массажным линиям и лифтинг отдель&shy;ных участков кожи. Завершают процедуру приятные, расслабляющие приёмы для мышц`,
+      `Хиромассаж лица дает прекрасный антивозрастной и общий улучшающий эффект, заметный с первого сеанса.<br>
+        <br>
+        Контур лица подтягивается, полностью уходят отёки и круги под глазами, кожа становится эластичной и упругой. Нормализуется жирность кожи, разглаживаются мимические морщины, лицо выглядит молодо и излучает здоровье`
+    ]
+    pageData.faq = [
+      globalData.commonFaceFaq[0],
+      globalData.commonFaceFaq[1],
+      {
+        question: `В чём отличие этого массажа от других массажей лица?`,
+        answer: `Главное отличие хиромассажа от других массажей лица в том, что он направлен не только на физическое, но и на психоэмоциональное состояние человека. После процедуры наши клиенты чувствуют, что их настроение заметно улучшилось, стало больше сил и энергии. В какой-то степени это относится ко всем расслабляющим массажам, но к хиромассажу особенно. При этом хиромассаж прекрасно справляется и со своей основной задачей – омолодить и подтянуть лицо.`
+      },
+      globalData.commonFaceFaq[2],
+      globalData.commonFaceFaq[3],
+      globalData.commonFaceFaq[4]
+    ]
+    pageData.priceList = {
+      showPromo: true
+    }
+    pageData.moreMassages = [3, 1, 2, 4]
+    pageData.hasMap = true
 
 block content
   include ../includes/modules/main-screen/main-screen
