--- a/wp-content/themes/expert-massage/views/pages/facial-lymphatic-drainage.pug
+++ b/wp-content/themes/expert-massage/views/pages/facial-lymphatic-drainage.pug
@@ -1,151 +1,96 @@
 extends ../layouts/default
 
 block variables
-  - var globalData = locals.data.globalData
   -
-    locals.data.pageData = {
-      url: '/facial-lymphatic-drainage/',
-      title: `Лимфодренажный массаж лица в Москве`,
-      description: `Лимфодренажный массаж лица - прорабатывается лицо, шея и зона декольте, эффект заметен после первой
-        процедуры`,
-      keywords: `лимфодренажный, массаж лица, услуга, описание, цена, стоимость, Москва`,
-      canonical: 'https://expert-massage-clinic.ru/facial-lymphatic-drainage/',
-      pageClass: 'facial-lymphatic-drainage-page',
-      theme: '3',
-      massage: globalData.massages['facial-lymphatic-drainage'],
-      mainScreenHeading: 'Лимфодренажный массаж лица',
-      mainScreenSubheading: `Убирает отёки и&nbsp;мешки под&nbsp;глазами, улучшает цвет лица`,
-      mainScreenFeatures: globalData.company.features,
-      aboutMassage: [
-        {
-          title: 'Что это за процедура?',
-          text: [
-            'Принципы лимфодренаж&shy;ного массажа одинаковы для лица, и тела — специалист воздействует на лимфу по направлению лимфотока, чтобы разогнать ее и вывести лишнюю жидкость.',
-            'Массажист, с помощью специ&shy;альных движений, устраняет застой лимфы, улучшает её циркуляцию, и полностью убирает отёки. Массаж запускает процесс питания клеток и тка&shy;ней, выводит токсины, улучшает состояние кожи и тонус мышц.'
-          ]
-        },
-        {
-          title: 'Какой будет результат?',
-          text: [
-            'У вас полностью пропадут отёки, станут более заметны скулы, ярче проявятся черты лица.',
-            'На лице появится здоровый румянец, вы будете выглядеть свежее и здоровее, как будто хорошо отдохнули.'
-          ]
-        },
-        {
-          title: 'Кому подойдёт этот массаж?',
-          text: [
-            `Всем, чья основная цель — снять выраженные отёки и улучшить цвет лица. Правда, если отёки регулярно появляются не только на лице, вам нужен <a class='link link_primary' href='/body-lymphatic-drainage/'>лимфодре&shy;нажный массаж всего тела</a>, так как он убирает не только про&shy;явления, но и причину отёков.`,
-            'Также лимфодренажный массаж лица помогает уменьшить жирность и проблемы кожи, но основная его функция именно в борьбе с отёками.'
-          ]
-        }
-      ],
-      massageResults: {
-        title: 'Результаты массажа лица',
-        face: {
-          slidesOrder: [1, 7, 8, 2, 3, 4, 5, 6]
-        }
-      },
-      reviewsBlock: {
-        title: 'Отзывы о&nbsp;массаже лица',
-        reviews: [
-          {
-            id: 28,
-            type: 'face',
-            source: 'yandex',
-            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась. Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО! Я вернусь, не пройдет и полгода...`,
-            author: 'Анна',
-            date: '13.02.2020'
-          },
-          {
-            id: 29,
-            type: 'face',
-            source: 'site',
-            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие. Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
-            author: 'Оксана',
-            date: '05.02.2020'
-          },
-          {
-            id: 30,
-            type: 'face',
-            source: 'site',
-            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
-            author: 'Татьяна',
-            date: '20.01.2020'
-          },
-          {
-            id: 28,
-            type: 'face',
-            source: 'yandex',
-            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась. Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО! Я вернусь, не пройдет и полгода...`,
-            author: 'Анна',
-            date: '13.02.2020'
-          },
-          {
-            id: 29,
-            type: 'face',
-            source: 'site',
-            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие. Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
-            author: 'Оксана',
-            date: '05.02.2020'
-          },
-          {
-            id: 30,
-            type: 'face',
-            source: 'site',
-            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
-            author: 'Татьяна',
-            date: '20.01.2020'
-          }
+    var pageData = JSON.parse(pageData)
+    pageData.title = `Лимфодренажный массаж лица в Москве`
+    pageData.description = `Лимфодренажный массаж лица - прорабатывается лицо, шея и зона декольте, эффект заметен после первой
+      процедуры`
+    pageData.keywords = `лимфодренажный, массаж лица, услуга, описание, цена, стоимость, Москва`
+    pageData.canonical = 'https://expert-massage-clinic.ru/facial-lymphatic-drainage/'
+    pageData.pageClass = 'facial-lymphatic-drainage-page'
+    pageData.theme = '3'
+    pageData.massage = globalData.massages['facial-lymphatic-drainage']
+    pageData.mainScreenHeading = 'Лимфодренажный массаж лица'
+    pageData.mainScreenSubheading = `Убирает отёки и&nbsp;мешки под&nbsp;глазами, улучшает цвет лица`
+    pageData.mainScreenFeatures = globalData.company.features
+    pageData.aboutMassage = [
+      {
+        title: 'Что это за процедура?',
+        text: [
+          'Принципы лимфодренаж&shy;ного массажа одинаковы для лица, и тела — специалист воздействует на лимфу по направлению лимфотока, чтобы разогнать ее и вывести лишнюю жидкость.',
+          'Массажист, с помощью специ&shy;альных движений, устраняет застой лимфы, улучшает её циркуляцию, и полностью убирает отёки. Массаж запускает процесс питания клеток и тка&shy;ней, выводит токсины, улучшает состояние кожи и тонус мышц.'
         ]
       },
-      massageVideo: {
-        id: 'H9IRW0ffpWk',
-        poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_face.jpg`,
-        sticker: false
-      },
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;лимфодренажного массажа',
-        features: [
-          {
-            title: 'Пропадут отёки и&nbsp;мешки под&nbsp;глазами',
-            text: ''
-          },
-          {
-            title: 'Цвет лица станет здоровым и&nbsp;однородным',
-            text: ''
-          },
-          {
-            title: 'Уменьшится жирность и&nbsp;проблемы кожи',
-            text: ''
-          }
+      {
+        title: 'Какой будет результат?',
+        text: [
+          'У вас полностью пропадут отёки, станут более заметны скулы, ярче проявятся черты лица.',
+          'На лице появится здоровый румянец, вы будете выглядеть свежее и здоровее, как будто хорошо отдохнули.'
         ]
       },
-      massageDescription: [
-        `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
-          <br>
-          Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
-        `Процедура включает в себя разогрев и активную стадию массажа, во время которой массажист сжимает и разминает мышцы лица по специальной технике. Это улучшает циркуляцию лимфы, способствует детоксикации и избавлению от отёков.<br>
-          <br>
-          Работа массажиста проходит строго по линиям лимфотока. В результате разгона лимфы, клетки насыщаются кислородом, а из организма выходит лишняя жидкость`,
-        `Эффект после сеанса виден сразу, лицо выглядит отдохнувшим, пропадают мешки под глазами, кожа подтягивается. Цвет лица становится здоровым и однородным, кожа выглядит свежей, увлажнённой, наполненной энергией`
-      ],
-      faq: [
-        locals.data.globalData.commonFaceFaq[0],
-        locals.data.globalData.commonFaceFaq[1],
-        {
-          question: `В чём отличие этого массажа от других массажей лица?`,
-          answer: `Лимфодренажный массаж лица предназначен для борьбы с отёками на лице. Он поможет, если вы встаёте утром с опухшим лицом и вам требуется время, чтобы прийти в норму.  Также, за счёт вывода лишней воды, после массажа ярче проявятся черты лица, и оно будет выглядеть естественнее. Но если вы склонны к отёкам не только на лице, но и на теле, мы рекомендуем делать лимфодренажный массаж всего тела, так как он отлично справляется и с отёчностью лица.`
-        },
-        locals.data.globalData.commonFaceFaq[2],
-        locals.data.globalData.commonFaceFaq[3],
-        locals.data.globalData.commonFaceFaq[4]
-      ],
-      priceList: {
-        showPromo: true
-      },
-      moreMassages: [4, 1, 2, 5],
-      hasMap: true
+      {
+        title: 'Кому подойдёт этот массаж?',
+        text: [
+          `Всем, чья основная цель — снять выраженные отёки и улучшить цвет лица. Правда, если отёки регулярно появляются не только на лице, вам нужен <a class='link link_primary' href='/body-lymphatic-drainage/'>лимфодре&shy;нажный массаж всего тела</a>, так как он убирает не только про&shy;явления, но и причину отёков.`,
+          'Также лимфодренажный массаж лица помогает уменьшить жирность и проблемы кожи, но основная его функция именно в борьбе с отёками.'
+        ]
+      }
+    ]
+    pageData.massageResults = {
+      title: 'Результаты массажа лица',
+      face: {
+        slidesOrder: [1, 7, 8, 2, 3, 4, 5, 6]
+      }
     }
+    pageData.reviewsBlock.title = 'Отзывы о&nbsp;массаже лица'
+    pageData.massageVideo = {
+      id: 'H9IRW0ffpWk',
+      poster: `${THEME_IMG_PATH}/massage-video/massage-video-poster_face.jpg`,
+      sticker: false
+    }
+    pageData.featuresBlock = {
+      heading: 'Что вы получите от&nbsp;лимфодренажного массажа',
+      features: [
+        {
+          title: 'Пропадут отёки и&nbsp;мешки под&nbsp;глазами',
+          text: ''
+        },
+        {
+          title: 'Цвет лица станет здоровым и&nbsp;однородным',
+          text: ''
+        },
+        {
+          title: 'Уменьшится жирность и&nbsp;проблемы кожи',
+          text: ''
+        }
+      ]
+    }
+    pageData.massageDescription = [
+      `В начале мастер наносит на лицо клиента гель алоэ-вера. Этот гель не закупоривает поры и идеально подходит для массажа.<br>
+        <br>
+        Пальцы массажиста скользят, не растягивая кожу, лицо после сеанса наполнено влагой, мышцы расслаблены. Что важно, гель алоэ абсолютно не вызывает воспалений`,
+      `Процедура включает в себя разогрев и активную стадию массажа, во время которой массажист сжимает и разминает мышцы лица по специальной технике. Это улучшает циркуляцию лимфы, способствует детоксикации и избавлению от отёков.<br>
+        <br>
+        Работа массажиста проходит строго по линиям лимфотока. В результате разгона лимфы, клетки насыщаются кислородом, а из организма выходит лишняя жидкость`,
+      `Эффект после сеанса виден сразу, лицо выглядит отдохнувшим, пропадают мешки под глазами, кожа подтягивается. Цвет лица становится здоровым и однородным, кожа выглядит свежей, увлажнённой, наполненной энергией`
+    ]
+    pageData.faq = [
+      globalData.commonFaceFaq[0],
+      globalData.commonFaceFaq[1],
+      {
+        question: `В чём отличие этого массажа от других массажей лица?`,
+        answer: `Лимфодренажный массаж лица предназначен для борьбы с отёками на лице. Он поможет, если вы встаёте утром с опухшим лицом и вам требуется время, чтобы прийти в норму.  Также, за счёт вывода лишней воды, после массажа ярче проявятся черты лица, и оно будет выглядеть естественнее. Но если вы склонны к отёкам не только на лице, но и на теле, мы рекомендуем делать лимфодренажный массаж всего тела, так как он отлично справляется и с отёчностью лица.`
+      },
+      globalData.commonFaceFaq[2],
+      globalData.commonFaceFaq[3],
+      globalData.commonFaceFaq[4]
+    ]
+    pageData.priceList = {
+      showPromo: true
+    }
+    pageData.moreMassages = [4, 1, 2, 5]
+    pageData.hasMap = true
 
 block content
   include ../includes/modules/main-screen/main-screen
