--- a/wp-content/themes/expert-massage/src/assets/scss/blocks/menu/submenu.scss
+++ b/wp-content/themes/expert-massage/src/assets/scss/blocks/menu/submenu.scss
@@ -28,17 +28,18 @@
 
     font-weight: 400;
     font-size: 10px;
+    line-height: 1.3;
     vertical-align: middle;
     text-transform: uppercase;
     color: $alt-default-color;
 
     border-radius: 2px;
     @include themify() {
-      &_main {
+      &_primary {
         background-color: $color-primary;
       }
 
-      &_alt {
+      &_secondary {
         background-color: $color-secondary;
       }
     }
