--- a/wp-content/themes/expert-massage/views/includes/modules/content/about-massage.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/about-massage.pug
@@ -1,7 +1,7 @@
 section.about-massage
   .about-massage__content.container
     h2.about-massage__title.heading Основное о массаже
-    each section, i in locals.data.pageData.aboutMassage
+    each section, i in pageData.aboutMassage
       .about-massage__card(class=`about-massage__card_${i + 1}`)
         h3.about-massage__caption!= section.title
         each paragraph in section.text
