--- a/wp-content/themes/expert-massage/views/includes/modules/content/application-form/application-block.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/application-form/application-block.pug
@@ -1,12 +1,12 @@
 - var formHeading = 'Оставьте заявку и получите скидку 20% на первый сеанс'
 - var formText = 'Вы увидите, как работает специалист, получи&shy;те профессиональную консультацию и&nbsp;сможе&shy;те определиться с&nbsp;планом процедур. Если вам не&nbsp;понравится, мы вернём деньги за&nbsp;сеанс'
-if locals.data.pageData.theme === '1'
+if pageData.theme === '1'
   - formHeading = 'Акция на январь и февраль. Любое количество сеансов скульптурно-буккального массажа со скидкой 30%'
   - formText = 'Мы хотим подарить большему количеству клиентов возможность стать прекраснее и запускаем акцию на самый популярный массаж лица в нашей клинике. Не откладывайте преображение — если первый сеанс вам не понравится, мы вернём деньги'
-if locals.data.pageData.theme === '7'
+if pageData.theme === '7'
   - formHeading = 'Акция на январь и февраль. Любое количество сеансов ручного моделирования со скидкой 30%'
   - formText = 'Мы хотим подарить большему количеству клиентов возможность стать прекраснее и запускаем акцию на самый популярный массаж для коррекции фигуры в нашей клинике. Не откладывайте преображение — если первый сеанс вам не понравится, мы вернём деньги'
-if locals.data.pageData.theme === '10'
+if pageData.theme === '10'
   - formHeading = 'Оставьте заявку для записи на сеанс массажа'
 
 mixin sticker(mainText, secondaryText, preTitle)
@@ -16,8 +16,8 @@ mixin sticker(mainText, secondaryText, preTitle)
     b.sticker__main-text= mainText
     span.sticker__secondary-text= secondaryText
 
-section.application-form(data-aos='zoom-in' data-aos-duration='500' data-aos-offset='140')
-  case locals.data.pageData.theme
+section.application-form(data-massage-id=(pageData.theme !== 'main' ? pageData.theme : false) data-aos='zoom-in' data-aos-duration='500' data-aos-offset='140')
+  case pageData.theme
     when '1'
       +sticker('До года', 'держится результат одного курса, а при поддержке остаётся навсегда')
     when '7'
