--- a/wp-content/themes/expert-massage/views/includes/modules/content/application-form/application-form.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/application-form/application-form.pug
@@ -1,14 +1,16 @@
 - var count = count || 0
 - count++
 
-form.application-form__form(action='/' method='post')
+form.application-form__form(action='/wp-admin/admin-post.php' method='post')
   .application-form__inputs
+    input(type='hidden' name='action' value='application')
+    input(type='hidden' name='massage-id')
     input(type='hidden' name='specialist-id')
     input(type='hidden' name='need-certificate')
     input.application-form__input(type='text' name='name' placeholder='Имя' aria-label='Имя' required)
     input.application-form__input(type='tel' name='phone' placeholder='Телефон' aria-label='Телефон' required)
     - var colorModifier = 'primary'
-    if ((locals.data.pageData.theme === '7') || (locals.data.pageData.theme === '4'))
+    if ((pageData.theme === '7') || (pageData.theme === '4'))
       - colorModifier = 'secondary'
     button.application-form__submit.button(class=`button_${colorModifier}` type='submit') Оставить заявку
   +custom-checkbox().application-form__personal-data(id=`applicationFormPersonalData${count}` name='personal-data-agreement' checked required)
