--- a/wp-content/themes/expert-massage/views/includes/modules/content/blocks-list.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/blocks-list.pug
@@ -1,8 +1,8 @@
 section.blocks-list
   .blocks-list__wrap.container
-    h2.heading.blocks-list__title!= locals.data.pageData.blocksList.title
+    h2.heading.blocks-list__title!= pageData.blocksList.title
     ol.blocks-list__list
-      each item in locals.data.pageData.blocksList.items
+      each item in pageData.blocksList.items
         li.blocks-list__item.blocks-list-item
           h3.blocks-list-item__title!= item.title
           p.blocks-list-item__text!= item.text
