--- a/wp-content/themes/expert-massage/views/includes/modules/content/price-list/price-list.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/price-list/price-list.pug
@@ -1,11 +1,10 @@
--
-  var priceList = locals.data.globalData.priceList
+- var priceList = globalData.priceList
 
 section.price-list
   .container.price-list__content
     h2.price-list__title.heading Цены и акции
     .price-list__wrap
-      if locals.data.pageData.priceList.showPromo
+      if pageData.priceList.showPromo
         -
           var promoAppearance = {
             'data-aos':'zoom-in',
@@ -13,30 +12,30 @@ section.price-list
             'data-aos-offset':'0',
             'data-aos-anchor-placement':'center-bottom'
           }
-        if locals.data.pageData.theme === '1'
+        if pageData.theme === '1'
           +promo-card(
-            locals.data.globalData.massages['sculptural-buccal-massage'].promo.title,
-            locals.data.globalData.massages['sculptural-buccal-massage'].promo.subtitle,
-            locals.data.globalData.massages['sculptural-buccal-massage'].promo.cardText,
-            locals.data.globalData.massages['sculptural-buccal-massage'].promo.buttonText,
-            locals.data.globalData.massages['sculptural-buccal-massage'].promo.buttonColor,
-            locals.data.globalData.massages['sculptural-buccal-massage'].promo.image
+            globalData.massages['sculptural-buccal-massage'].promo.title,
+            globalData.massages['sculptural-buccal-massage'].promo.subtitle,
+            globalData.massages['sculptural-buccal-massage'].promo.cardText,
+            globalData.massages['sculptural-buccal-massage'].promo.buttonText,
+            globalData.massages['sculptural-buccal-massage'].promo.buttonColor,
+            globalData.massages['sculptural-buccal-massage'].promo.image
           ).price-list__promotion.price-list__promotion_photo&attributes(promoAppearance)
-        else if locals.data.pageData.theme === '7'
+        else if pageData.theme === '7'
           +promo-card(
-            locals.data.globalData.massages['figure-modeling'].promo.title,
-            locals.data.globalData.massages['figure-modeling'].promo.subtitle,
-            locals.data.globalData.massages['figure-modeling'].promo.cardText,
-            locals.data.globalData.massages['figure-modeling'].promo.buttonText,
-            locals.data.globalData.massages['figure-modeling'].promo.buttonColor,
-            locals.data.globalData.massages['figure-modeling'].promo.image
+            globalData.massages['figure-modeling'].promo.title,
+            globalData.massages['figure-modeling'].promo.subtitle,
+            globalData.massages['figure-modeling'].promo.cardText,
+            globalData.massages['figure-modeling'].promo.buttonText,
+            globalData.massages['figure-modeling'].promo.buttonColor,
+            globalData.massages['figure-modeling'].promo.image
           ).price-list__promotion.price-list__promotion_photo&attributes(promoAppearance)
         else
           +promo-card(
-            locals.data.globalData.mainPromo.title,
-            locals.data.globalData.mainPromo.subtitle,
-            locals.data.globalData.mainPromo.text,
-            locals.data.globalData.mainPromo.buttonText
+            globalData.mainPromo.title,
+            globalData.mainPromo.subtitle,
+            globalData.mainPromo.text,
+            globalData.mainPromo.buttonText
           ).price-list__promotion&attributes(promoAppearance)
       .price-list__prices
         each section in priceList.sections
@@ -55,18 +54,18 @@ section.price-list
                   - promoText = `${promoText}${massage.promo.text}<br>`
                   if massage.promo.starPlacement
                     - additionalClass = `table__row_promo table__row_promo-${massage.promo.starPlacement}`
-                if massage === locals.data.pageData.massage
+                if massage === pageData.massage
                   - additionalClass = `${additionalClass} table__row_highlight`
                 tr.table__row(class=additionalClass)
                   td.table__cell
                     b.price-list__massage-name= massage.name
                   td.table__cell
-                    if (massage.price.old) && (massage === locals.data.pageData.massage)
+                    if (massage.price.old) && (massage === pageData.massage)
                       span.price-list__old-price!= `${massage.price.old}&thinsp;₽`
                       br
                     span.price-list__first-price!= `${massage.price.first}&thinsp;₽`
                   td.table__cell
-                    if (massage.price.old) && (massage === locals.data.pageData.massage)
+                    if (massage.price.old) && (massage === pageData.massage)
                       span.price-list__old-price!= `${massage.price.old}&thinsp;₽`
                       br
                     span.price-list__standard-price!= `${massage.price.standard}&thinsp;₽`
