--- a/wp-content/themes/expert-massage/views/includes/modules/content/reviews-block.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/content/reviews-block.pug
@@ -1,5 +1,5 @@
 section.reviews-block
-  if locals.data.pageData.reviewsBlock.showSticker
+  if pageData.reviewsBlock.showSticker
     article.reviews-block__sticker.reviews-sticker.sticker(data-aos='fade-in' data-aos-duration='100' data-aos-offset='140')
       +svg-icon('#polystar').sticker__image
       b.reviews-sticker__pre-number.sticker__secondary-text более
@@ -7,14 +7,14 @@ section.reviews-block
       span.reviews-sticker__text клиентов уже получили помощь от&nbsp;наших врачей
   .reviews-block__wrapper.container
     .reviews-block__content
-      h2.heading.reviews-block__title!= locals.data.pageData.reviewsBlock.title
+      h2.heading.reviews-block__title!= pageData.reviewsBlock.title
       +rating-block().reviews-block__rating
       .reviews-block__slider.slider
         button.slider__button.slider__button_prev.hidden_mobile(aria-label='Предыдущий отзыв')
         ul.reviews-block__reviews-list
-          each review in locals.data.pageData.reviewsBlock.reviews
+          each review in pageData.reviewsBlock.reviews
             li.reviews-block__review
-              article.review-card(data-id=review.id data-type=review.type)
+              article.review-card
                 p.review-card__text= review.text
                 p.review-card__info= `${review.author}, ${review.date}`
                 p.review-card__source
@@ -24,6 +24,6 @@ section.reviews-block
                     span отзыв с сайта
         button.slider__button.slider__button_next.hidden_mobile(aria-label='Следующий отзыв')
       - var linkColorClass = 'link_primary'
-      if ((locals.data.pageData.theme === 'main') || (locals.data.pageData.theme === '1'))
+      if ((pageData.theme === 'main') || (pageData.theme === '1'))
         - linkColorClass = 'link_secondary'
       a.reviews-block__link.link.link_arrow.underline(class=linkColorClass href='/reviews/') Читать все отзывы или оставить свой
