--- a/wp-content/themes/expert-massage/views/includes/modules/head/head.pug
+++ b/wp-content/themes/expert-massage/views/includes/modules/head/head.pug
@@ -1,14 +1,14 @@
 meta(charset='utf-8')
-title= locals.data.pageData.title
-meta(name='description' content=locals.data.pageData.description)
-meta(name='keywords' content=locals.data.pageData.keywords)
+title= pageData.title
+meta(name='description' content=pageData.description)
+meta(name='keywords' content=pageData.keywords)
 meta(name='viewport' content='width=device-width')
 meta(http-equiv='X-UA-Compatible' content='IE=edge')
 meta(name="yandex-verification" content="8085584c20aa6a13")
 link(rel='manifest' href=`${THEME_DIST_PATH}/site.webmanifest`)
 include favicons
-if locals.data.pageData.canonical
-  link(rel='canonical' href=locals.data.pageData.canonical)
-if locals.data.pageData.hasMap
+if pageData.canonical
+  link(rel='canonical' href=pageData.canonical)
+if pageData.hasMap
   script(src="https://api-maps.yandex.ru/2.1/?apikey=b176543a-340b-4de9-9ded-9037e167250b&lang=ru_RU")
 - wp_head()
