--- a/wp-content/themes/expert-massage/views/pages/index.pug
+++ b/wp-content/themes/expert-massage/views/pages/index.pug
@@ -1,116 +1,61 @@
 extends ../layouts/default
 
 block variables
-  - var globalData = locals.data.globalData
   -
-    locals.data.pageData = {
-      url: '/',
-      title: `Массаж в Москве. ${globalData.company.businessDuration} лет успешной работы. Медицинский подход`,
-      description: `Массаж, Москва - услуги профессиональных массажистов с медицинской лицензией - более
-        ${globalData.company.businessDuration} лет успешной работы, эффективные классические и авторские методики.`,
-      keywords: `массаж в Москве, массаж, Москва, услуги, антицеллюлитный массаж, массаж спины, массаж лица, медицинский
-        массаж, массаж от целлюлита`,
-      canonical: 'https://expert-massage-clinic.ru/',
-      pageClass: 'index-page',
-      theme: 'main',
-      mainScreenHeading: 'EXPERT&nbsp;— первая клиника профессионального массажа',
-      mainScreenSubheading: `Мы избавляем от&nbsp;болей в&nbsp;спине, целлюлита и&nbsp;отёков, подтягиваем лицо без
-        операций и&nbsp;лечим массажем`,
-      mainScreenFeatures: globalData.company.features,
-      featuresBlock: {
-        heading: 'Почему нам доверяют',
-        link: {
-          url: '/about/',
-          text: 'Больше о нас'
-        },
-        features: [
-          {
-            title: 'Первая клиника профессионального массажа в&nbsp;России',
-            text: `Не&nbsp;салон красоты и&nbsp;не&nbsp;поликлиника, где один массажист работает со&nbsp;всеми
-              по&nbsp;одному шаблону, а&nbsp;клиника со&nbsp;спе&shy;циализацией и&nbsp;врачами. Для нас это не&nbsp;просто
-              бизнес, мы верим в&nbsp;своё дело`
-          },
-          {
-            title: 'Работаем так, чтобы нас хотелось советовать близким',
-            text: `Нам важно, чтобы вы были довольны, и&nbsp;у&nbsp;нас неплохо получается: почти 70% клиентов приходят
-              по&nbsp;совету друзей. Многие ходят к&nbsp;нам семьями. Почитайте
-              <a class='link link_secondary underline' href='/reviews/'>отзывы</a>, чтобы узнать о&nbsp;нас побольше`
-          },
-          {
-            title: 'Гарантируем безопасность, результат и&nbsp;честность. Для нас важно помочь',
-            text: `Следуем принципу «Не&nbsp;навреди». Не&nbsp;завышаем количество сеансов, не&nbsp;продаём ненужные
-              процедуры и&nbsp;гарантируем результат. Мы не&nbsp;хотим зарабатывать в&nbsp;ущерб репутации`
-          }
-        ]
+    var pageData = JSON.parse(pageData)
+    pageData.title = `Массаж в Москве. ${globalData.company.businessDuration} лет успешной работы. Медицинский подход`
+    pageData.description = `Массаж, Москва - услуги профессиональных массажистов с медицинской лицензией - более
+      ${globalData.company.businessDuration} лет успешной работы, эффективные классические и авторские методики.`
+    pageData.keywords = `массаж в Москве, массаж, Москва, услуги, антицеллюлитный массаж, массаж спины, массаж лица, медицинский
+      массаж, массаж от целлюлита`
+    pageData.canonical = 'https://expert-massage-clinic.ru/'
+    pageData.pageClass = 'index-page'
+    pageData.theme = 'main'
+    pageData.mainScreenHeading = 'EXPERT&nbsp;— первая клиника профессионального массажа'
+    pageData.mainScreenSubheading = `Мы избавляем от&nbsp;болей в&nbsp;спине, целлюлита и&nbsp;отёков, подтягиваем лицо без
+      операций и&nbsp;лечим массажем`
+    pageData.mainScreenFeatures = globalData.company.features
+    pageData.featuresBlock = {
+      heading: 'Почему нам доверяют',
+      link: {
+        url: '/about/',
+        text: 'Больше о нас'
       },
-      reviewsBlock: {
-        title: 'Отзывы о&nbsp;нас',
-        showSticker: true,
-        reviews: [
-          {
-            id: 45,
-            type: 'fullbody',
-            source: 'yandex',
-            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась. Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО! Я вернусь, не пройдет и полгода...`,
-            author: 'Анна',
-            date: '13.02.2020'
-          },
-          {
-            id: 4,
-            type: 'back',
-            source: 'site',
-            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие. Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
-            author: 'Оксана',
-            date: '05.02.2020'
-          },
-          {
-            id: 125,
-            type: 'lymphatic-drainage',
-            source: 'site',
-            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
-            author: 'Татьяна',
-            date: '20.01.2020'
-          },
-          {
-            id: 45,
-            type: 'fullbody',
-            source: 'yandex',
-            text: `Огромная благодарность Антону Николаевичу!!! Пришла к нему на массаж, когда спина уже не гнулась. Уже после двух сеансов почувствовала такое облегчение и легкость, которых и не надеялась обрести. СПАСИБО! Я вернусь, не пройдет и полгода...`,
-            author: 'Анна',
-            date: '13.02.2020'
-          },
-          {
-            id: 4,
-            type: 'back',
-            source: 'site',
-            text: `Мой выбор этого центра был сделан случайно. Я, имея проблемы с позвоночником, посещаю курсы массажа регулярно. Но в Москве не живу постоянно и здесь у меня нет своего специалиста. В центре я прошла пробный сеанс у Антона Николаевича и сразу стало понятно, что я оказалась «в руках» профессионала. За 10 сеансов были сняты все зажимы и спазмы, Вернулась свобода движений, легкость. Улучшился сон и общее самочувствие. Спасибо. Теперь и в Москве я знаю специалиста, к которому я могу обратиться.`,
-            author: 'Оксана',
-            date: '05.02.2020'
-          },
-          {
-            id: 125,
-            type: 'lymphatic-drainage',
-            source: 'site',
-            text: `Большое спасибо Антон Николаевич за то, что вернули мне былую форму. Вначале с недоверием относилась к лимфодренажному массажу, поэтому решила попробовать один сеанс. Но мне так понравился массаж, отношение Антона Николаевича ко мне, что решилась на весь курс (12 сеансов). Эти 12 сеансов были сеансы расслабления и приятого общения. Антон Николаевич так поработал с моими проблемными местечками на животе и бедрах, что после курса массажа я ощущаю себя вновь 30-летней. Во всем теле легкость, я бодра весь день. А еще я похудела на 2 размера и до сих пор у меня идет уменьшение объемов. Хотя после последнего сеанса прошла неделя. Это просто чудо!!!. Спасибо Вам, Вашим волшебным рукам!!`,
-            author: 'Татьяна',
-            date: '20.01.2020'
-          }
-        ]
-      },
-      massageResults: {
-        title: 'Результаты массажа',
-        face: {
-          slidesOrder: [1, 2, 3, 4, 5, 6, 7, 8]
+      features: [
+        {
+          title: 'Первая клиника профессионального массажа в&nbsp;России',
+          text: `Не&nbsp;салон красоты и&nbsp;не&nbsp;поликлиника, где один массажист работает со&nbsp;всеми
+            по&nbsp;одному шаблону, а&nbsp;клиника со&nbsp;спе&shy;циализацией и&nbsp;врачами. Для нас это не&nbsp;просто
+            бизнес, мы верим в&nbsp;своё дело`
         },
-        figure: {
-          slidesOrder: [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+        {
+          title: 'Работаем так, чтобы нас хотелось советовать близким',
+          text: `Нам важно, чтобы вы были довольны, и&nbsp;у&nbsp;нас неплохо получается: почти 70% клиентов приходят
+            по&nbsp;совету друзей. Многие ходят к&nbsp;нам семьями. Почитайте
+            <a class='link link_secondary underline' href='/reviews/'>отзывы</a>, чтобы узнать о&nbsp;нас побольше`
+        },
+        {
+          title: 'Гарантируем безопасность, результат и&nbsp;честность. Для нас важно помочь',
+          text: `Следуем принципу «Не&nbsp;навреди». Не&nbsp;завышаем количество сеансов, не&nbsp;продаём ненужные
+            процедуры и&nbsp;гарантируем результат. Мы не&nbsp;хотим зарабатывать в&nbsp;ущерб репутации`
         }
-      },
-      priceList: {
-        showPromo: true
-      },
-      hasMap: true
+      ]
     }
+    pageData.reviewsBlock.title = 'Отзывы о&nbsp;нас'
+    pageData.reviewsBlock.showSticker = true
+    pageData.massageResults = {
+      title: 'Результаты массажа',
+      face: {
+        slidesOrder: [1, 2, 3, 4, 5, 6, 7, 8]
+      },
+      figure: {
+        slidesOrder: [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
+      }
+    }
+    pageData.priceList = {
+      showPromo: true
+    }
+    pageData.hasMap = true
 
 block content
   include ../includes/modules/main-screen/main-screen
